default/objects/Prescreen__c/Prescreen__c.object-meta.xml
<CustomObject>
    <description>To capture Lead PreScreen Data</description>
    <label>Prescreen</label>
    <nameField>
        <displayFormat>Prescreen{YYYY}{MM}-{0}</displayFormat>
        <label>Prescreen Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prescreens</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>