default/objects/Prescreen__c/fields/Alimony_Amount__c.field-meta.xml
<CustomField>
    <fullName>Alimony_Amount__c</fullName>
    <inlineHelpText>Are you responsible for any alimony, child support or maintenance?</inlineHelpText>
    <label>Monthly Alimony Amount?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>