default/objects/Prescreen__c/fields/Borrower__c.field-meta.xml
<CustomField>
    <fullName>Borrower__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Borrower/Co-Borrower</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Prescreens</relationshipLabel>
    <relationshipName>Prescreens</relationshipName>
    <type>Lookup</type>
</CustomField>