default/objects/Prescreen__c/fields/Borrower_DOB__c.field-meta.xml
<CustomField>
    <fullName>Borrower_DOB__c</fullName>
    <label>Borrower DOB</label>
    <type>Date</type>
</CustomField>