default/objects/Prescreen__c/fields/Borrower_SSN__c.field-meta.xml
<CustomField>
    <fullName>Borrower_SSN__c</fullName>
    <label>Borrower Social Security Number</label>
    <length>11</length>
    <maskChar>X</maskChar>
    <maskType>ssn</maskType>
    <type>EncryptedText</type>
</CustomField>