default/objects/Prescreen__c/fields/Co_Borrower__c.field-meta.xml
<CustomField>
    <fullName>Co_Borrower__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Co-Borrower</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Prescreens (Co-Borrower)</relationshipLabel>
    <relationshipName>Prescreens_Co_Borrower</relationshipName>
    <type>Lookup</type>
</CustomField>