default/objects/Prescreen__c/fields/Co_Borrower_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Co_Borrower_First_Name__c</fullName>
    <inlineHelpText>Will you be purchasing alone or jointly?</inlineHelpText>
    <label>Co-Borrower First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>