default/objects/Prescreen__c/fields/Current_Employment_Term__c.field-meta.xml
<CustomField>
    <fullName>Current_Employment_Term__c</fullName>
    <inlineHelpText>How long have you been in your current job or industry? (years)</inlineHelpText>
    <label>Current Employment Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>