default/objects/Prescreen__c/fields/Debt_to_Income__c.field-meta.xml
<CustomField>
    <fullName>Debt_to_Income__c</fullName>
    <formula>Total_Estimated_Monthly_Liabilities__c / Estimated_Monthly_Gross__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DTI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>