default/objects/Prescreen__c/fields/Desired_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Desired_Loan_Amount__c</fullName>
    <label>Desired Loan Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>