default/objects/Prescreen__c/fields/Down_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Down_Payment_Amount__c</fullName>
    <inlineHelpText>How much will you have for a down payment?</inlineHelpText>
    <label>Down Payment Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>