default/objects/Prescreen__c/fields/Estimated_Credit_Score__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Credit_Score__c</fullName>
    <inlineHelpText>Do you remember what your scores
were? If not, how do you feel your credit is rated?</inlineHelpText>
    <label>Estimated Credit Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>