default/objects/Prescreen__c/fields/Estimated_Monthly_Income_Gross__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Monthly_Income_Gross__c</fullName>
    <label>Estimated Annual Income - Gross</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>