default/objects/Prescreen__c/fields/Late_Payment_Comment__c.field-meta.xml
<CustomField>
    <fullName>Late_Payment_Comment__c</fullName>
    <label>Late Payment Comment</label>
    <type>TextArea</type>
</CustomField>