default/objects/Prescreen__c/fields/Late_Payments__c.field-meta.xml
<CustomField>
    <fullName>Late_Payments__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Have you incurred any late pays, over 30 days, in the last 12 months?</inlineHelpText>
    <label>Late Payments?</label>
    <type>Checkbox</type>
</CustomField>