default/objects/Prescreen__c/fields/Loan_Amount_Range__c.field-meta.xml
<CustomField>
    <fullName>Loan_Amount_Range__c</fullName>
    <inlineHelpText>What loan amount are you looking for?</inlineHelpText>
    <label>Loan Amount Range</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>100,000 - 200,000</fullName>
            </value>
            <value>
                <fullName>200,000 - 300,000</fullName>
            </value>
            <value>
                <fullName>300,000 - 400,000</fullName>
            </value>
            <value>
                <fullName>400,000 - 500,000</fullName>
            </value>
            <value>
                <fullName>500,000 - 600,000</fullName>
            </value>
            <value>
                <fullName>600,000 - 700,000</fullName>
            </value>
            <value>
                <fullName>700,000 - 800,000</fullName>
            </value>
            <value>
                <fullName>800,000 - 900,000</fullName>
            </value>
            <value>
                <fullName>900,000 - 1,000,000</fullName>
            </value>
            <value>
                <fullName>1,000,000 - 1,500,000</fullName>
            </value>
            <value>
                <fullName>1,500,000 - 2,000,000</fullName>
            </value>
            <value>
                <fullName>2,000,000 - 2,500,000</fullName>
            </value>
            <value>
                <fullName>2,500,000 - 3,000,000</fullName>
            </value>
            <value>
                <fullName>3,000,000+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>