default/objects/Prescreen__c/fields/Loan_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Loan_Purpose__c</fullName>
    <description>What type of transaction are you looking for?</description>
    <label>Loan Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Loan_Purposes</valueSetName>
    </valueSet>
</CustomField>