default/objects/Prescreen__c/fields/Loan_Type__c.field-meta.xml
<CustomField>
    <fullName>Loan_Type__c</fullName>
    <description>What type of transaction are you looking for?</description>
    <label>Loan Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Loan_Types</valueSetName>
    </valueSet>
</CustomField>