default/objects/Prescreen__c/fields/LTV__c.field-meta.xml
<CustomField>
    <fullName>LTV__c</fullName>
    <formula>(Estimated_Value__c - Down_Payment_Amount__c) / Estimated_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LTV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>