default/objects/Prescreen__c/fields/Monthly_Child_Support__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Child_Support__c</fullName>
    <label>Monthly Child Support?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>