default/objects/Prescreen__c/fields/Number_of_Years_in_Profession__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Years_in_Profession__c</fullName>
    <label>Number of Years in Profession</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>