default/objects/Prescreen__c/fields/Past_Bankruptcy_Comment__c.field-meta.xml
<CustomField>
    <fullName>Past_Bankruptcy_Comment__c</fullName>
    <label>Past Bankruptcy Comment</label>
    <type>TextArea</type>
</CustomField>