default/objects/Prescreen__c/fields/Past_Foreclosure_Comment__c.field-meta.xml
<CustomField>
    <fullName>Past_Foreclosure_Comment__c</fullName>
    <label>Past Foreclosure Comment</label>
    <type>TextArea</type>
</CustomField>