default/objects/Prescreen__c/fields/Past_Foreclosures__c.field-meta.xml
<CustomField>
    <fullName>Past_Foreclosures__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Past Foreclosures?</label>
    <type>Checkbox</type>
</CustomField>