default/objects/Prescreen__c/fields/Past_Judgement_Comment__c.field-meta.xml
<CustomField>
    <fullName>Past_Judgement_Comment__c</fullName>
    <label>Past Judgement Comment</label>
    <type>TextArea</type>
</CustomField>