default/objects/Prescreen__c/fields/Past_Judgments__c.field-meta.xml
<CustomField>
    <fullName>Past_Judgments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Past Judgments?</label>
    <type>Checkbox</type>
</CustomField>