default/objects/Prescreen__c/fields/Past_Judgments_Foreclosure_Bankruptcy__c.field-meta.xml
<CustomField>
    <fullName>Past_Judgments_Foreclosure_Bankruptcy__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Do you have any
collections, judgments, liens, recent delinquencies, bankruptcy or foreclosure?</inlineHelpText>
    <label>Past Bankruptcy?</label>
    <type>Checkbox</type>
</CustomField>