default/objects/Prescreen__c/fields/Primary_Borrower_or_Co_Borrower__c.field-meta.xml
<CustomField>
    <fullName>Primary_Borrower_or_Co_Borrower__c</fullName>
    <defaultValue>&quot;Primary Borrower&quot;</defaultValue>
    <label>Primary Borrower or Co-Borrower</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary Borrower</fullName>
            </value>
            <value>
                <fullName>Co-Borrower</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>