default/objects/Prescreen__c/fields/Property_Usage__c.field-meta.xml
<CustomField>
    <fullName>Property_Usage__c</fullName>
    <label>Property Usage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Property_Usage_Types</valueSetName>
    </valueSet>
</CustomField>