default/objects/Prescreen__c/fields/Total_Estimated_Monthly_Liabilities__c.field-meta.xml
<CustomField>
    <fullName>Total_Estimated_Monthly_Liabilities__c</fullName>
    <inlineHelpText>Estimated total monthly payments you make.. (Student loans, auto loans, minimum credit card
payments, personal loans).
*Excludes child support and alimony</inlineHelpText>
    <label>Total Estimated Monthly Liabilities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>