default/objects/Prescreen__c/fields/Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type__c</fullName>
    <inlineHelpText>What type of transaction are you looking for ?</inlineHelpText>
    <label>Trans Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Purchase</fullName>
            </value>
            <value>
                <fullName>Refinance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>